--- a/playbooks/roles/post-install/templates/ntpconf_ubuntu.j2
+++ b/playbooks/roles/post-install/templates/ntpconf_ubuntu.j2
@@ -27,16 +27,16 @@ tos minclock 4 minsane 3
 
 # Public NTP servers supporting Network Time Security:
 # server time.cloudflare.com nts
-
+#testFINAL
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See https://www.pool.ntp.org/join.html for
 # more information.
-pool "{{ntp0}}" iburst
-pool "{{ntp1}}" iburst
-pool "{{ntp2}}" iburst
-pool "{{ntp3}}" iburst
+pool " {{ ntp0 }} " iburst
+pool " {{ ntp1 }} " iburst
+pool " {{ ntp2 }} " iburst
+pool " {{ ntp3 }} " iburst
 #SIMON'S COMMENT
-
+#TEST
 # Use Ubuntu's ntp server as a fallback.
 server ntp.ubuntu.com
 
